a2a4j-core/src/main/java/cn/pheker/ai/spec/error/A2AClientError.java
package cn.pheker.ai.spec.error;

/**
 * @author PheonixHkbxoic
 * @date 2025/4/13 00:05
 * @desc
 */
public class A2AClientError extends RuntimeException {
    public A2AClientError(String message) {
        super(message);
    }
}
